--- a/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
+++ b/Sonar Response Manuscript/Sonar_Response_Manuscript.tex
@@ -296,7 +296,7 @@ and odontocete feeding rates ranged from 2.5 to 96.8 buzzes/hour (Table
 
 \begin{table}[t]
 
-\caption{\label{tab:unnamed-chunk-1}Cetacean feeding rates \label{rf_tbl}}
+\caption{\label{tab:rf_tbl}Cetacean feeding rates \label{rf_tbl}}
 \centering
 \begin{threeparttable}
 \begin{tabular}{llrr}
